--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <main>
 <section class="main-logo">
-    <img src="img/googlelogo_color_272x92dp.png">
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
 </section>
 <div>
  <section class="main-input">
